[package]
name = "metabase-cli"
version = "0.1.0"
authors = ["Kevin Stenerson <kevin.stenerson@wyyerd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"
diesel = { version = "1.4.2", features = ["postgres", "serde_json", "chrono"] }
dotenv = "0.14.1"
serde = "1.0.99"
serde_derive = "1.0.99"
serde_json = "1.0.40"
chrono = "0.4.7"
regex = "1.2.1"
